# nrl_match_prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
src/nrl/api/: main.py
src/nrl/core/: config.py  elo.py  validation.py
src/nrl/jobs/: ingest.py  predict.py  score.py  train,.py
tests/unit/: test_elo.py  test_model_sanity.py  test_validation.py
